--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap-icons": "^1.11.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
+    "ng-multiselect-dropdown": "^0.3.9",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
