--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@popperjs/core": "^2.11.8",
+    "apexcharts": "^3.44.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "font-awesome": "^4.7.0",
