--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apexcharts": "^3.44.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
     "ng-multiselect-dropdown": "^0.3.9",
@@ -33,6 +34,7 @@
     "@angular-devkit/build-angular": "^15.0.0",
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^15.0.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
