--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
     "bootstrap-icons": "^1.11.2",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
     "ng-multiselect-dropdown": "^0.3.9",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.10.8",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.0",
-    "@angular/cli": "~15.0.0",
+    "@angular/cli": "^15.2.10",
     "@angular/compiler-cli": "^15.0.0",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
